@@ -19,6 +19,9 @@ and passes Javascript through unchanged. (Changed in WebHelpers 1.1: removed
 built-in "_jsmin" package due to licensing issues; details in 
 webhelpers/pylonslib/_jsmin.py .)
 
+PYRAMID USERS: this implementation is incompatible with Pyramid. No
+Pyramid-compatible implementation is currently known.
+
 Contributed by Pedro Algarvio and Domen Kozar <ufs@ufsoft.org>.
 URL: http://docs.fubar.si/minwebhelpers/
 """
